--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -10,7 +11,7 @@ android {
     defaultConfig {
         applicationId "com.justjump.trickywords"
         minSdk 27
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -50,6 +51,7 @@ dependencies {
     // Unit test
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'junit:junit:4.13.2'
+    implementation 'androidx.test.ext:junit-ktx:1.1.3'
 
     // mainCore compiler
     implementation 'androidx.core:core-ktx:1.9.0'
@@ -65,10 +67,16 @@ dependencies {
     implementation "androidx.core:core-splashscreen:1.0.0"
 
     // material design
-    implementation "androidx.compose.material:material:1.2.1"
+    implementation "androidx.compose.material:material:1.3.0"
 
     // navigation for compose
     implementation "androidx.navigation:navigation-compose:2.5.2"
     implementation 'androidx.navigation:navigation-runtime-ktx:2.5.2'
-    implementation 'androidx.test.ext:junit-ktx:1.1.3'
+
+    // coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+
+    // view pages for jetpack compose
+    implementation "com.google.accompanist:accompanist-pager:0.27.0"
+    implementation 'com.google.accompanist:accompanist-pager-indicators:0.27.0'
 }
