--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,12 +56,12 @@ dependencies {
     // mainCore compiler
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.activity:activity-compose:1.6.0'
+    implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
 
     // Preview of the composable functions
-    implementation "androidx.compose.ui:ui-tooling-preview:1.2.1"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.3.0"
 
     // implementation for splash screen module
     implementation "androidx.core:core-splashscreen:1.0.0"
@@ -70,8 +70,8 @@ dependencies {
     implementation "androidx.compose.material:material:1.3.0"
 
     // navigation for compose
-    implementation "androidx.navigation:navigation-compose:2.5.2"
-    implementation 'androidx.navigation:navigation-runtime-ktx:2.5.2'
+    implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation 'androidx.navigation:navigation-runtime-ktx:2.5.3'
 
     // coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
@@ -79,4 +79,7 @@ dependencies {
     // view pages for jetpack compose
     implementation "com.google.accompanist:accompanist-pager:0.27.0"
     implementation 'com.google.accompanist:accompanist-pager-indicators:0.27.0'
+
+    // glide
+    implementation "com.github.skydoves:landscapist-glide:1.4.8"
 }
