--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-parcelize'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -45,13 +47,16 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    kapt {
+        correctErrorTypes = true
+    }
 }
 
 dependencies {
     // Unit test
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'junit:junit:4.13.2'
-    implementation 'androidx.test.ext:junit-ktx:1.1.3'
+    implementation 'androidx.test.ext:junit-ktx:1.1.4'
 
     // mainCore compiler
     implementation 'androidx.core:core-ktx:1.9.0'
@@ -61,17 +66,31 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
 
     // Preview of the composable functions
-    implementation "androidx.compose.ui:ui-tooling-preview:1.3.0"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.3.2"
 
     // implementation for splash screen module
     implementation "androidx.core:core-splashscreen:1.0.0"
 
     // material design
-    implementation "androidx.compose.material:material:1.3.0"
+    implementation "androidx.compose.material:material:1.3.1"
 
     // navigation for compose
     implementation "androidx.navigation:navigation-compose:2.5.3"
     implementation 'androidx.navigation:navigation-runtime-ktx:2.5.3'
+
+    // viewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+
+    // liveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
+
+    // Dagger Hilt
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-android-compiler:2.44"
+
+    // This implementation have the tools to create the viewModel to use
+    // in the composable function: hiltViewModel<ViewModel>()
+    implementation("androidx.hilt:hilt-navigation-compose:1.0.0")
 
     // coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
