--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,7 @@ dependencies {
 
     // liveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
+    implementation "androidx.compose.runtime:runtime-livedata:1.3.2"
 
     // Dagger Hilt
     implementation "com.google.dagger:hilt-android:2.44"
