--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     // Unit test
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'junit:junit:4.13.2'
-    implementation 'androidx.test.ext:junit-ktx:1.1.4'
+    implementation 'androidx.test.ext:junit-ktx:1.1.5'
 
     // mainCore compiler
     implementation 'androidx.core:core-ktx:1.9.0'
@@ -77,6 +77,10 @@ dependencies {
     // navigation for compose
     implementation "androidx.navigation:navigation-compose:2.5.3"
     implementation 'androidx.navigation:navigation-runtime-ktx:2.5.3'
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     // viewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
